# csm-train-pytorch

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  MLX_TOKEN_GENERATION_PLAN.md  README.md  benchmark_mlx.py  cleanup.sh  compare_sampling.sh  optimize_mlx.sh  pyproject.toml  test_exact_sampling.sh  test_tokens.sh
cleanup_files/temp/: fix_mlx_sampling.py  mlx_debug.py  mlx_debug_cross.py  mlx_debug_layers.py  mlx_debug_tokens.py  token_generator_analyze.py  token_generator_debug.py  token_generator_test.py
cleanup_files/tests/: mlx_token_test.py  test_mlx_sampling.py
docs/: README.md  cli.md  fine_tuning.md
docs/reference/: README.md  moshi.md  sesame_csm.md
docs/reference/moshi/: architecture.md  ethics.md  implementation.md  index.md  inference.md  model_architecture.md  training.md
docs/reference/sesame_csm/: architecture.md  comparison.md  components.md  considerations.md  implementation.md  index.md  inference.md  introduction.md  lora_finetuning.md  lora_implementation.md  mlx_integration_testing.md  training.md
examples/: README.md  advanced_finetuning.sh  basic_finetuning.sh  benchmark_and_optimize.sh  expressive_style_transfer.sh  huggingface_lora_finetune.py  huggingface_lora_finetuning.md  low_resource_finetuning.sh  multi_speaker_finetuning.sh  resume_finetuning.sh  speakers_config.json  test_lora.py  test_lora_finetune.py
examples/lora_finetuning/: README.md  basic_lora_finetune.py  low_resource_finetune.py  multi_speaker_finetune.py  speakers_config_example.json  style_transfer_finetune.py
src/csm/: __init__.py  _version.py  generator.py
src/csm/cli/: MLX_TOKEN_GENERATION.md  __init__.py  apply_mlx_optimizations.py  finetune_lora.py  finetune_lora_multi.py  generate.py  generate_cpu.py  generate_mlx.py  mlx_embedding.py  mlx_generation.py  mlx_kvcache.py  mlx_layers.py  mlx_sample_exact.py  mlx_sample_exact_optimized.py  mlx_wrapper.py  sample_test.py  test_token_generation.py  train.py  train_mlx.py  use_exact_sampling.py  verify.py
src/csm/cli/mlx_components/: config.py  generator.py  model_wrapper.py  sampling.py  transformer.py
src/csm/data/: __init__.py
src/csm/data/training/: __init__.py
src/csm/inference/: __init__.py
src/csm/mlx/: mlx_embedding.py  mlx_generation.py  mlx_ops.py  mlx_sample_exact.py  mlx_wrapper.py  token_analyzer.py
src/csm/mlx/components/: __init__.py  config.py  generator.py  lora.py  model_wrapper.py  sampling.py  transformer.py  utils.py
src/csm/models/: __init__.py  model.py
src/csm/training/: __init__.py  benchmark_lora.py  data.py  lora_trainer.py  mlx_trainer.py  multi_speaker_lora.py  run_lora_benchmark.py  run_mlx_benchmark.py  test_finetune.py  test_lora.py  test_lora_comprehensive.py  test_mlx_integration.py  test_mlx_training.py  test_training.py  trainer.py  utils.py
src/csm/utils/: __init__.py
src/csm/watermarking/: __init__.py  utils.py
src/csm/watermarking/silentcipher/: model.py  server.py  stft.py
tests/: create_test_model.py
