[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "csm"
description = "Conversational Speech Model"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dynamic = ["version"]
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "tokenizers==0.21.0",
    "transformers==4.49.0",
    "huggingface_hub==0.28.1",
    "moshi==0.2.2",
    "torchtune==0.4.0",
    "torchao==0.9.0",
    # Additional dependencies for the vendored silentcipher
    "PyYAML>=6.0",
    "librosa==0.10.0",
    "SoundFile==0.12.1",
    "scipy>=1.11.0",
    "pydub==0.25.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
]

apple = [
    "mlx>=0.3.0",
]

train = [
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "safetensors>=0.4.0",
]

finetune = [
    "safetensors>=0.4.0",
    "datasets>=2.12.0",
    "huggingface_hub>=0.14.1",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "torchaudio>=2.0.0",
]

lora = [
    "mlx>=0.3.0",
    "safetensors>=0.4.0",
    "numpy>=1.24.0",
]

[project.scripts]
csm-generate = "csm.cli.generate:main"
csm-generate-mlx = "csm.cli.generate_mlx:main"
csm-verify = "csm.cli.verify:main"
csm-train = "csm.cli.train:main"
csm-train-mlx = "csm.cli.train_mlx:main"
csm-finetune-lora = "csm.cli.finetune_lora:main"
csm-finetune-lora-multi = "csm.cli.finetune_lora_multi:main"
csm-benchmark-lora = "csm.training.run_lora_benchmark:main"
csm-benchmark-mlx = "csm.training.run_mlx_benchmark:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]
write_to = "src/csm/_version.py"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true